--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Jens Ivar Jørdre <jensivar@hubii.com>",
   "license": "LGPL-3.0",
   "main": "lib/index.js",
+  "dependencies": {
+    "glob": "^7.1.4"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
-    "glob": "^7.1.3",
     "mocha": "^6.0.2"
   }
 }
